# IsoBoxFramework

./: .gitignore  CMakeLists.txt  MonitoringTemp.h  README.md  SharedQueue.h  isolatedBoxCmake.cpp  isolatedBoxCmake.h  isolatedBox_PID.cpp  isolatedBox_PID.h  isolatedBox_actuator.cpp  isolatedBox_actuator.h  isolatedBox_dataentryqueue.cpp  isolatedBox_dataentryqueue.h  isolatedBox_printdebug.cpp  isolatedBox_printdebug.h  main.cpp
TestCase/: testIsolated_boxInit.txt  testIsolated_testPointSettings.txt
